--- a/DalFacade/DalFacade.csproj
+++ b/DalFacade/DalFacade.csproj
@@ -12,4 +12,8 @@
 	  <RootNamespace />
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Include="..\DalList\DataSource.cs" Link="DataSource.cs" />
+  </ItemGroup>
+
 </Project>
