style pages and continue pl

--- a/PL/PL.csproj
+++ b/PL/PL.csproj
@@ -13,8 +13,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="1111.jpg" />
+    <None Remove="גכעגכע.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BlTest\BlTest.csproj" />
     <ProjectReference Include="..\BL\BL.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="1111.jpg" />
+    <Resource Include="גכעגכע.jpg" />
   </ItemGroup>
 
 </Project>
