add simulator and start working with it

--- a/PL/PL.csproj
+++ b/PL/PL.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\BlTest\BlTest.csproj" />
     <ProjectReference Include="..\BL\BL.csproj" />
+    <ProjectReference Include="..\Simulator\Simulator.csproj" />
   </ItemGroup>
 
   <ItemGroup>
